tests/sksl/errors/ArrayTypeTooManyDimensionsUnsized1.glsl
### Compilation failed:

error: 1: unsized arrays are not permitted here
float[][2] x;
     ^^
1 error
